# datagen

./: .coveragerc  .gitignore  COVERAGE_REPORT.md  Makefile  README.md  cli.py  coverage_runner.py  datagen.py  generator.py  llm_generator.py  pyproject.toml  schemas.py  test_generation.py  test_plan.json
.verdent/: project_rules.md
datagen/: __init__.py  __main__.py  formula_parsing.py  generator.py  llm_generator.py  main.py  schemas.py
tests/: test_classification_auc.py  test_data_quality.py  test_formula_parsing.py  test_generator_features.py  test_row_count_simple.py
